# lumay-SI-AI-hub

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  fix_env.py  pyproject.toml  requirements.txt  scenario_results.json  start_server.ps1  test_create_session.py  test_llm.py  test_seed.py  test_voice.py  update_deepgram.py  update_livekit.py  voice_test.html
backend/ai/: __init__.py  config.py  exceptions.py  models.py  token_usage.py
backend/ai/agent_assist/: prompts.py
backend/ai/embeddings/: __init__.py  encoder.py  vector_store.py
backend/ai/evaluation/: __init__.py  metrics.py  response_evaluator.py
backend/ai/gateway/: __init__.py  ai_gateway.py
backend/ai/guardrails/: __init__.py  content_safety.py  output_validator.py  pii_guard.py
backend/ai/intelligence/: __init__.py  models.py  pipeline.py  prompts.py  service.py
backend/ai/memory/: __init__.py  conversation_memory.py  summarizer.py
backend/ai/orchestrator/: __init__.py  base_graph.py
backend/ai/pipelines/: __init__.py  base_pipeline.py  classification_pipeline.py  complaint_pipeline.py  sentiment_pipeline.py  summarisation_pipeline.py
backend/ai/prompts/: __init__.py  base_prompt.py  loader.py  system_prompts.py  templates.py
backend/ai/providers/: __init__.py  anthropic_provider.py  azure_openai.py  base.py  local_provider.py  openai_provider.py
backend/ai/retrieval/: __init__.py  retriever.py
backend/alembic/: env.py
backend/alembic/versions/: 20260713_1220_create_interactions_table.py  20260713_1830_create_customers_table.py  20260713_1930_create_complaints_table.py  20260713_2210_create_workflows_table.py  20260714_0900_create_notifications_table.py  20260715_0930_phase2_extended_fields.py  20260720_1100_create_conversation_tables.py  20260720_1600_add_conversation_priority.py  20260720_1900_add_supervisor_participant_type.py  20260720_2200_create_agent_assist_insights_table.py  20260720_2300_create_users_table.py  20260721_0900_add_conversation_hot_column_indexes.py  20260721_1000_add_complaint_severity_enum_labels.py  20260721_1100_add_complaint_source_enum_labels.py  9b1ab922e651_phase2_ai_fields.py
backend/app/: __init__.py  lifespan.py  main.py
backend/app/config/: __init__.py  constants.py  environment.py  loader.py  settings.py  validators.py
backend/app/demo/: __init__.py  event_bus.py  routers.py  synthetic.py
backend/app/dependencies/: __init__.py  (+12 more)
backend/data/: faq.json  policies.json  products.json
backend/domains/: __init__.py
backend/infrastructure/: __init__.py
backend/integrations/: __init__.py  base_client.py
backend/knowledge/: __init__.py  models.py  repository.py  service.py
backend/scratch/: test_azure_tts_direct.py  test_deepgram_tts.py  test_dg_kwargs.py  test_openai_tts.py
backend/scripts/: seed_complaints.py  seed_demo_cases.py  seed_sql.py  verify_scenarios.py
backend/shared/: __init__.py  base_event.py  base_exception.py  base_model.py  base_repository.py  base_schema.py  base_service.py  pagination.py  response_schemas.py  types.py
backend/tests/: conftest.py
backend/voice/: __init__.py  audio.py  config.py  pipeline.py  router.py  runtime.py  session_manager.py  transcript_manager.py  transport.py
(+732 files in other folders)
