[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumay-si-ai-hub-backend"
version = "1.0.0"
description = "Enterprise AI-powered Insurance Complaints & Sentiment Intelligence Platform"
requires-python = ">=3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "redis[hiredis]==5.2.1",
    "aio-pika==9.4.3",
    "minio==7.2.11",
    "opensearch-py[async]==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "structlog==24.4.0",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-instrumentation-fastapi==0.49b2",
    "opentelemetry-instrumentation-sqlalchemy==0.49b2",
    "opentelemetry-exporter-otlp==1.28.2",
    "orjson==3.10.12",
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
    "arrow==1.3.0",
    "aiosmtplib==3.0.2",
    "sse-starlette==3.4.6",
]

[project.optional-dependencies]
voice = [
    "pipecat-ai[azure,deepgram]>=0.1.0",
    "livekit-api>=0.8.0",
    "livekit>=1.1.0",
]
ai = [
    "langgraph==0.2.55",
    "langchain==0.3.9",
    "langchain-openai==0.2.10",
    "openai==1.57.2",
    "instructor==1.7.0",
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "domains", "ai", "platform", "integrations", "shared", "voice"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "domains", "ai", "platform", "integrations", "shared"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "ARG", "RUF"]
ignore = ["B008", "B904"]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
"alembic/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
  "alembic/",
]

[tool.mypy.overrides]
module = ["tests/*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--tb=short", "-ra", "-q"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires services)",
    "e2e: End-to-end tests",
    "slow: Tests that take longer than 5 seconds",
]

[tool.coverage.run]
source = ["app", "domains", "ai", "platform", "integrations", "shared"]
omit = ["tests/*", "alembic/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
